# clockking

./: .gitignore  Cargo.toml  LICENSE  README.md
.clockking/: db.json
.github/workflows/: main.yaml
src/: app_context.rs  autosave.rs  checkbox_input.rs  clock_entries_table.rs  clock_entry_form.rs  date_picker.rs  db.rs  format.rs  granularity.rs  granularity_picker.rs  input.rs  main.rs  main_dialog.rs  model.rs  record.rs  stats_view.rs  text_area_input.rs  time_picker.rs  time_picker_input.rs
