[package]
name = "clockking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = { version = "*", features = ["crossterm-backend"] }
cursive_table_view = "0.14"
cursive-extras = "0.3.0"
chrono = { version = "0.4", features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"