[package]
name = "clockking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = { version = "*", default-features = false, features = ["crossterm-backend"] }
cursive_table_view = "0.14.0"
cursive_calendar_view = "0.8.0"
cursive-extras = "0.9.3"
chrono = { version = "0.4.24", features = ["serde"]}
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
scheduled-thread-pool = "0.2.5"